fix on mobile, update build

--- a/src/styles/common/_basic.scss
+++ b/src/styles/common/_basic.scss
@@ -6,6 +6,7 @@ body {
 
 .wrapper {
     padding: 134px 0 148px 0;
+    height: 100vh;
     min-height: 100%;
 }
 
